<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    android:background="@color/greyGuardian"
    tools:context=".LoginActivity">


    <ImageView
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginTop="100dp"
        android:src="@drawable/logo"
        android:layout_gravity="center_horizontal"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:text="LOGIN"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:layout_marginTop="20dp"
        android:layout_width="90dp"
        android:layout_height="60dp"
        android:layout_gravity="center"
        tools:ignore="HardcodedText"/>

    <com.google.android.material.textfield.TextInputLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColorHint="@color/yellow"
        android:hint="@string/email">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:id="@+id/etEmail"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/greyGuardian"
            app:boxBackgroundColor="@color/yellow"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColorHint="@color/yellow"
        android:hint="@string/senha">


        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:id="@+id/etSenha"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/greyGuardian"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvForgot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/grey"
        android:layout_gravity="right"
        android:text="@string/esqueceu_a_senha"
        android:layout_marginTop="20dp"/>

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/yellow"
        android:textStyle="bold"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:text="@string/login" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvCadastrar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/grey"
        android:layout_gravity="center"
        android:text="@string/n_o_tem_uma_conta_cadastre_se"
        android:layout_marginTop="20dp"/>


    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvAnonimous"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/yellow"
        android:textStyle="bold"
        android:layout_gravity="center"
        android:text="@string/entrar_sem_login"
        android:layout_marginTop="70dp"/>

</androidx.appcompat.widget.LinearLayoutCompat>