<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:backgroundTint="@color/white"
    android:elevation="10dp"
    app:cardCornerRadius="16dp">

    <!--Card-->
    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <!--Botão Icone fechar -->
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnClosePopup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:background="@color/zxing_transparent"
            android:layout_marginEnd="2dp"
            android:textSize="20sp"
            android:textColor="@color/blue_nav"
            android:textStyle="bold"
            android:layout_marginBottom="-20dp"
            android:text="@string/xFechar"
            />

        <!-- Titulo Card-->
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/TextCobracaTitle"
            android:textColor="@color/blue_nav"
            android:textSize="20sp"
            android:textStyle="bold" />

        <!--Conteudo Card-->
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvText"
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:paddingBottom="20dp"
            android:text="@string/textPopCobrança"
            android:textColor="@color/black"
            android:textSize="16sp" />


    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.cardview.widget.CardView>