<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_vertical"
    android:orientation="vertical"
    tools:context=".AcessarArmarioActivity">


    <!--ToolBar-->
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/greyGuardian"
        android:minHeight="?attr/actionBarSize"
        app:contentInsetStart="0dp"
        app:contentInsetStartWithNavigation="0dp"
        app:layout_constraintTop_toTopOf="parent">

        <!--ToolBar Imagem-Logo -->
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginEnd="10dp"
            android:contentDescription="@string/componenteqr"
            android:src="@drawable/logovetor" />

    </androidx.appcompat.widget.Toolbar>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="10dp"
        android:drawablePadding="8dp"
<<<<<<< Updated upstream
        android:text="@string/acessar_arm_rio"
        android:textSize="22sp"
        android:textStyle="bold"
        android:textColor="@color/blue_nav"
        app:drawableStartCompat="@drawable/loc_location"
=======
        android:padding="2dp"
        android:text="@string/acessar_arm_rio"
        android:textSize="22sp"
        android:textStyle="bold"
        android:textColor="@color/greyGuardian"
        app:drawableStartCompat="@drawable/settings_1390_svgrepo_com"
>>>>>>> Stashed changes
        app:layout_constraintBottom_toTopOf="@+id/locker_container"
        app:layout_constraintTop_toBottomOf="@id/toolbar" />    <!-- Armário ilustrativo -->
    <RelativeLayout
        android:id="@+id/locker_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="110dp"
        app:layout_constraintBottom_toTopOf="@+id/btn_container"
        app:layout_constraintEnd_toEndOf="@id/toolbar"
        app:layout_constraintStart_toStartOf="@id/toolbar"
        app:layout_constraintTop_toTopOf="@id/toolbar">

        <!-- Primeira ImageView - Armario -->

        <!-- Segunda ImageView - Logo (sobreposta à primeira) -->
        <ImageView
            android:id="@+id/imgArm"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:src="@drawable/vector_locker" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="28dp"
            android:layout_height="wrap_content"
            android:layout_alignStart="@id/imgArm"
            android:layout_alignTop="@id/imgArm"
            android:layout_marginStart="121dp"
            android:layout_marginTop="79dp"
            android:src="@drawable/logovetorLocker" />
    </RelativeLayout>

    <TextView
        android:id="@+id/lockerTag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="loc-001"
        android:paddingHorizontal="14dp"
        android:paddingVertical="5dp"
        android:background="@drawable/textbox_custom_outline"
        android:textStyle="bold"
        android:textColor="@color/blue_nav"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@id/btn_container"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/locker_container" />
    <!--Botões-->
    <LinearLayout
        android:id="@+id/btn_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/locker_container"
        android:paddingVertical="50dp">

        <Button
            android:id="@+id/btnAbrirTemp"
            android:layout_width="270dp"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_button"
            android:maxLines="1"
            android:elevation="8dp"
            android:paddingHorizontal="25dp"
            android:paddingVertical="15dp"
            android:text="@string/abrir_temporariamente"
            android:textColor="@color/white"
            android:layout_marginBottom="30dp"/>
        <Button
            android:layout_width="270dp"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:elevation="8dp"
            android:background="@drawable/rounded_button"
            android:paddingVertical="15dp"
            android:paddingHorizontal="25dp"
            android:text="@string/encerrar_loc"
            android:textColor="@color/white" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>